--- a/guessinggame.css
+++ b/guessinggame.css
@@ -14,6 +14,11 @@ h1 {
 p {
     font-size: 16px;
 }
+#infoplace {
+    color: #3D1400;
+    height: 40px;
+    margin: 20px;
+}
 #game {
     background-color: #aaa;
     padding: 10px;
